try to get the build working

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,12 +1,9 @@
-container:
-  image: node:latest
-
-check_task:
-  node_modules_cache:
-    folder: node_modules
-    fingerprint_script: cat yarn.lock
-    populate_script: yarn install
-  test_script: yarn test
+build_task:
+  name: "Build Docker Image"
+  container:
+    image: docker:latest
+  build:
+    docker build -t worker .
 
 task:
   name: "Staging Deploy"
