try a docker build again

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -6,6 +6,12 @@ parallel_task:
       - image: node:lts
   test_script: sleep 300
 
+docker_build_task:
+  name: "Docker Build"
+  container: docker:dind
+  background_script: dockerd
+  build_script: docker build .
+
 task:
   name: "Staging Deploy"
   container:
